--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="92" transform="translate(581,211)" data-x="581" data-y="211"></circle>
-          <circle fill="white" stroke="none" r="75" transform="translate(538,213)" data-x="538" data-y="213"></circle>
-          <circle fill="white" stroke="none" r="84" transform="translate(755,216)" data-x="755" data-y="216"></circle>
-          <circle fill="white" stroke="none" r="91" transform="translate(597,227)" data-x="597" data-y="227"></circle>
-          <circle fill="white" stroke="none" r="88" transform="translate(602,271)" data-x="602" data-y="271"></circle>
-          <circle fill="white" stroke="none" r="68" transform="translate(700,300)" data-x="700" data-y="300"></circle>
-          <circle fill="white" stroke="none" r="75" transform="translate(570,262)" data-x="570" data-y="262"></circle>
-          <circle fill="white" stroke="none" r="95" transform="translate(748,286)" data-x="748" data-y="286"></circle>
-          <circle fill="white" stroke="none" r="60" transform="translate(631,264)" data-x="631" data-y="264"></circle>
-          <circle fill="white" stroke="none" r="79" transform="translate(580,258)" data-x="580" data-y="258"></circle>
-          <circle fill="white" stroke="none" r="84" transform="translate(659,268)" data-x="659" data-y="268"></circle>
-          <circle fill="white" stroke="none" r="93" transform="translate(728,275)" data-x="728" data-y="275"></circle>
+          <circle fill="white" stroke="none" r="59" transform="translate(743,228)" data-x="743" data-y="228"></circle>
+          <circle fill="white" stroke="none" r="78" transform="translate(578,200)" data-x="578" data-y="200"></circle>
+          <circle fill="white" stroke="none" r="87" transform="translate(603,295)" data-x="603" data-y="295"></circle>
+          <circle fill="white" stroke="none" r="99" transform="translate(683,201)" data-x="683" data-y="201"></circle>
+          <circle fill="white" stroke="none" r="96" transform="translate(530,290)" data-x="530" data-y="290"></circle>
+          <circle fill="white" stroke="none" r="63" transform="translate(549,251)" data-x="549" data-y="251"></circle>
+          <circle fill="white" stroke="none" r="70" transform="translate(625,287)" data-x="625" data-y="287"></circle>
+          <circle fill="white" stroke="none" r="54" transform="translate(554,282)" data-x="554" data-y="282"></circle>
+          <circle fill="white" stroke="none" r="98" transform="translate(672,213)" data-x="672" data-y="213"></circle>
+          <circle fill="white" stroke="none" r="97" transform="translate(694,232)" data-x="694" data-y="232"></circle>
+          <circle fill="white" stroke="none" r="88" transform="translate(675,267)" data-x="675" data-y="267"></circle>
+          <circle fill="white" stroke="none" r="76" transform="translate(515,253)" data-x="515" data-y="253"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -218,15 +218,32 @@
             <circle id="js-left-button" fill="#9A0009" cx="189.5" cy="87.5" r="7.5" class="h-g"></circle>
           </g>
         </g>
-        <g id="js-blow-paths" stroke="black">
-          <line x1="374" y1="318.559" x2="18.805" y2="63.364"></line>
-          <line x1="374" y1="318.559" x2="48.026" y2="642.584"></line>
-          <line x1="374" y1="318.559" x2="713.61" y2="660.767"></line>
-          <line x1="374" y1="318.559" x2="718.805" y2="71.805"></line>
-          <line x1="374" y1="318.559" x2="299.974" y2="63.364"></line>
-          <line x1="374" y1="318.559" x2="283.74" y2="660.767"></line>
-          <line x1="374" y1="318.559" x2="18.805" y2="219.857"></line>
-          <line x1="377.247" y1="318.559" x2="724" y2="489.662"></line>
+        <g id="js-meets-blow" transform="translate(625,435)" class="h-g">
+          <rect fill="#333" width="27" height="20"></rect>
+          <rect fill="#333" width="36" height="22"></rect>
+          <rect fill="#333" width="31" height="30"></rect>
+          <rect fill="#333" width="25" height="39"></rect>
+          <rect fill="#333" width="38" height="28"></rect>
+          <rect fill="#333" width="35" height="22"></rect>
+          <rect fill="#333" width="28" height="40"></rect>
+          <rect fill="#333" width="36" height="24"></rect>
+          <rect fill="#333" width="25" height="32"></rect>
+          <rect fill="#333" width="22" height="27"></rect>
+          <rect fill="#333" width="35" height="32"></rect>
+          <rect fill="#333" width="20" height="30"></rect>
+          <rect fill="#333" width="29" height="21"></rect>
+          <rect fill="#333" width="35" height="24"></rect>
+          <rect fill="#333" width="34" height="36"></rect>
+          <rect fill="#333" width="27" height="30"></rect>
+          <rect fill="#333" width="32" height="29"></rect>
+          <rect fill="#333" width="37" height="21"></rect>
+          <rect fill="#333" width="30" height="39"></rect>
+          <rect fill="#333" width="37" height="25"></rect>
+          <rect fill="#333" width="31" height="24"></rect>
+          <rect fill="#333" width="32" height="23"></rect>
+          <rect fill="#333" width="20" height="35"></rect>
+          <rect fill="#333" width="38" height="28"></rect>
+          <rect fill="#333" width="35" height="23"></rect>
         </g>
       </g>
       <g id="js-entire-caleydoscope" class="h-g">
@@ -328,26 +345,26 @@
       </g>
       <g id="js-svg" class="h-g">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(808,456)" data-x="808" data-y="456"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(657,186)" data-x="657" data-y="186"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(671,676)" data-x="671" data-y="676"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(477,830)" data-x="477" data-y="830"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(671,289)" data-x="671" data-y="289"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(637,82)" data-x="637" data-y="82"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(667,108)" data-x="667" data-y="108"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(316,601)" data-x="316" data-y="601"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(980,499)" data-x="980" data-y="499"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(994,98)" data-x="994" data-y="98"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1024,777)" data-x="1024" data-y="777"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(762,76)" data-x="762" data-y="76"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(608,808)" data-x="608" data-y="808"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(516,117)" data-x="516" data-y="117"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(938,587)" data-x="938" data-y="587"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(356,803)" data-x="356" data-y="803"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(449,640)" data-x="449" data-y="640"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(874,273)" data-x="874" data-y="273"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(709,74)" data-x="709" data-y="74"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(870,806)" data-x="870" data-y="806"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(960,466)" data-x="960" data-y="466"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(921,581)" data-x="921" data-y="581"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(436,593)" data-x="436" data-y="593"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(456,617)" data-x="456" data-y="617"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(946,691)" data-x="946" data-y="691"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(764,418)" data-x="764" data-y="418"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(847,753)" data-x="847" data-y="753"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(563,622)" data-x="563" data-y="622"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(302,520)" data-x="302" data-y="520"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(662,224)" data-x="662" data-y="224"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(728,492)" data-x="728" data-y="492"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(651,790)" data-x="651" data-y="790"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(418,466)" data-x="418" data-y="466"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(959,770)" data-x="959" data-y="770"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(553,749)" data-x="553" data-y="749"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(676,356)" data-x="676" data-y="356"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(907,249)" data-x="907" data-y="249"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(379,730)" data-x="379" data-y="730"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(752,172)" data-x="752" data-y="172"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(528,630)" data-x="528" data-y="630"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
