--- a/index.html
+++ b/index.html
@@ -146,20 +146,47 @@
             <path d="M679.6521971041294,358.19747680583464 L693.5304660905747,326.0665936878767" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
           </g>
         </mask>
+        <g id="js-meets-blow" transform="translate(625,435)" class="h-g">
+          <rect fill="#aaa" width="29" height="19"></rect>
+          <rect fill="#aaa" width="10" height="30"></rect>
+          <rect fill="#aaa" width="22" height="10"></rect>
+          <rect fill="#aaa" width="30" height="10"></rect>
+          <rect fill="#aaa" width="26" height="17"></rect>
+          <rect fill="#aaa" width="29" height="11"></rect>
+          <rect fill="#aaa" width="16" height="19"></rect>
+          <rect fill="#aaa" width="12" height="23"></rect>
+          <rect fill="#aaa" width="27" height="14"></rect>
+          <rect fill="#aaa" width="16" height="13"></rect>
+          <rect fill="#aaa" width="23" height="26"></rect>
+          <rect fill="#aaa" width="26" height="18"></rect>
+          <rect fill="#aaa" width="22" height="23"></rect>
+          <rect fill="#aaa" width="11" height="16"></rect>
+          <rect fill="#aaa" width="11" height="22"></rect>
+          <rect fill="#aaa" width="28" height="19"></rect>
+          <rect fill="#aaa" width="11" height="28"></rect>
+          <rect fill="#aaa" width="23" height="11"></rect>
+          <rect fill="#aaa" width="14" height="30"></rect>
+          <rect fill="#aaa" width="25" height="21"></rect>
+          <rect fill="#aaa" width="19" height="18"></rect>
+          <rect fill="#aaa" width="10" height="24"></rect>
+          <rect fill="#aaa" width="28" height="16"></rect>
+          <rect fill="#aaa" width="30" height="11"></rect>
+          <rect fill="#aaa" width="29" height="27"></rect>
+        </g>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="59" transform="translate(743,228)" data-x="743" data-y="228"></circle>
-          <circle fill="white" stroke="none" r="78" transform="translate(578,200)" data-x="578" data-y="200"></circle>
-          <circle fill="white" stroke="none" r="87" transform="translate(603,295)" data-x="603" data-y="295"></circle>
-          <circle fill="white" stroke="none" r="99" transform="translate(683,201)" data-x="683" data-y="201"></circle>
-          <circle fill="white" stroke="none" r="96" transform="translate(530,290)" data-x="530" data-y="290"></circle>
-          <circle fill="white" stroke="none" r="63" transform="translate(549,251)" data-x="549" data-y="251"></circle>
-          <circle fill="white" stroke="none" r="70" transform="translate(625,287)" data-x="625" data-y="287"></circle>
-          <circle fill="white" stroke="none" r="54" transform="translate(554,282)" data-x="554" data-y="282"></circle>
-          <circle fill="white" stroke="none" r="98" transform="translate(672,213)" data-x="672" data-y="213"></circle>
-          <circle fill="white" stroke="none" r="97" transform="translate(694,232)" data-x="694" data-y="232"></circle>
-          <circle fill="white" stroke="none" r="88" transform="translate(675,267)" data-x="675" data-y="267"></circle>
-          <circle fill="white" stroke="none" r="76" transform="translate(515,253)" data-x="515" data-y="253"></circle>
+          <circle fill="white" stroke="none" r="53" transform="translate(703,237)" data-x="703" data-y="237"></circle>
+          <circle fill="white" stroke="none" r="98" transform="translate(649,208)" data-x="649" data-y="208"></circle>
+          <circle fill="white" stroke="none" r="92" transform="translate(754,232)" data-x="754" data-y="232"></circle>
+          <circle fill="white" stroke="none" r="63" transform="translate(775,267)" data-x="775" data-y="267"></circle>
+          <circle fill="white" stroke="none" r="62" transform="translate(592,211)" data-x="592" data-y="211"></circle>
+          <circle fill="white" stroke="none" r="59" transform="translate(652,245)" data-x="652" data-y="245"></circle>
+          <circle fill="white" stroke="none" r="60" transform="translate(575,269)" data-x="575" data-y="269"></circle>
+          <circle fill="white" stroke="none" r="93" transform="translate(584,217)" data-x="584" data-y="217"></circle>
+          <circle fill="white" stroke="none" r="51" transform="translate(742,292)" data-x="742" data-y="292"></circle>
+          <circle fill="white" stroke="none" r="70" transform="translate(780,280)" data-x="780" data-y="280"></circle>
+          <circle fill="white" stroke="none" r="66" transform="translate(539,220)" data-x="539" data-y="220"></circle>
+          <circle fill="white" stroke="none" r="66" transform="translate(744,224)" data-x="744" data-y="224"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -217,33 +244,6 @@
             <rect id="white-rect" fill="#FFFFFF" x="441" y="-100" width="300" height="300"></rect>
             <circle id="js-left-button" fill="#9A0009" cx="189.5" cy="87.5" r="7.5" class="h-g"></circle>
           </g>
-        </g>
-        <g id="js-meets-blow" transform="translate(625,435)" class="h-g">
-          <rect fill="#333" width="27" height="20"></rect>
-          <rect fill="#333" width="36" height="22"></rect>
-          <rect fill="#333" width="31" height="30"></rect>
-          <rect fill="#333" width="25" height="39"></rect>
-          <rect fill="#333" width="38" height="28"></rect>
-          <rect fill="#333" width="35" height="22"></rect>
-          <rect fill="#333" width="28" height="40"></rect>
-          <rect fill="#333" width="36" height="24"></rect>
-          <rect fill="#333" width="25" height="32"></rect>
-          <rect fill="#333" width="22" height="27"></rect>
-          <rect fill="#333" width="35" height="32"></rect>
-          <rect fill="#333" width="20" height="30"></rect>
-          <rect fill="#333" width="29" height="21"></rect>
-          <rect fill="#333" width="35" height="24"></rect>
-          <rect fill="#333" width="34" height="36"></rect>
-          <rect fill="#333" width="27" height="30"></rect>
-          <rect fill="#333" width="32" height="29"></rect>
-          <rect fill="#333" width="37" height="21"></rect>
-          <rect fill="#333" width="30" height="39"></rect>
-          <rect fill="#333" width="37" height="25"></rect>
-          <rect fill="#333" width="31" height="24"></rect>
-          <rect fill="#333" width="32" height="23"></rect>
-          <rect fill="#333" width="20" height="35"></rect>
-          <rect fill="#333" width="38" height="28"></rect>
-          <rect fill="#333" width="35" height="23"></rect>
         </g>
       </g>
       <g id="js-entire-caleydoscope" class="h-g">
@@ -345,26 +345,26 @@
       </g>
       <g id="js-svg" class="h-g">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(960,466)" data-x="960" data-y="466"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(921,581)" data-x="921" data-y="581"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(436,593)" data-x="436" data-y="593"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(456,617)" data-x="456" data-y="617"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(946,691)" data-x="946" data-y="691"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(764,418)" data-x="764" data-y="418"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(847,753)" data-x="847" data-y="753"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(563,622)" data-x="563" data-y="622"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(302,520)" data-x="302" data-y="520"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(662,224)" data-x="662" data-y="224"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(728,492)" data-x="728" data-y="492"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(651,790)" data-x="651" data-y="790"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(418,466)" data-x="418" data-y="466"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(959,770)" data-x="959" data-y="770"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(553,749)" data-x="553" data-y="749"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(676,356)" data-x="676" data-y="356"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(907,249)" data-x="907" data-y="249"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(379,730)" data-x="379" data-y="730"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(752,172)" data-x="752" data-y="172"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(528,630)" data-x="528" data-y="630"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(461,825)" data-x="461" data-y="825"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(992,229)" data-x="992" data-y="229"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(346,279)" data-x="346" data-y="279"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(755,258)" data-x="755" data-y="258"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(778,586)" data-x="778" data-y="586"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(365,193)" data-x="365" data-y="193"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(399,622)" data-x="399" data-y="622"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(622,386)" data-x="622" data-y="386"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(648,727)" data-x="648" data-y="727"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(476,678)" data-x="476" data-y="678"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(393,54)" data-x="393" data-y="54"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(251,440)" data-x="251" data-y="440"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(718,135)" data-x="718" data-y="135"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(556,516)" data-x="556" data-y="516"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(319,778)" data-x="319" data-y="778"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(463,668)" data-x="463" data-y="668"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(353,89)" data-x="353" data-y="89"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(922,249)" data-x="922" data-y="249"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(608,442)" data-x="608" data-y="442"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(783,381)" data-x="783" data-y="381"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
