working on meets confetti

--- a/index.html
+++ b/index.html
@@ -147,46 +147,46 @@
           </g>
         </mask>
         <g id="js-meets-blow" transform="translate(625,435)" class="h-g">
-          <rect fill="#aaa" width="21" height="19"></rect>
-          <rect fill="#aaa" width="17" height="26"></rect>
-          <rect fill="#aaa" width="26" height="22"></rect>
-          <rect fill="#aaa" width="13" height="13"></rect>
-          <rect fill="#aaa" width="16" height="17"></rect>
-          <rect fill="#aaa" width="25" height="17"></rect>
-          <rect fill="#aaa" width="28" height="19"></rect>
-          <rect fill="#aaa" width="28" height="12"></rect>
-          <rect fill="#aaa" width="14" height="13"></rect>
-          <rect fill="#aaa" width="18" height="26"></rect>
-          <rect fill="#aaa" width="10" height="17"></rect>
-          <rect fill="#aaa" width="11" height="14"></rect>
-          <rect fill="#aaa" width="21" height="21"></rect>
-          <rect fill="#aaa" width="20" height="13"></rect>
-          <rect fill="#aaa" width="29" height="20"></rect>
-          <rect fill="#aaa" width="29" height="30"></rect>
-          <rect fill="#aaa" width="14" height="25"></rect>
-          <rect fill="#aaa" width="12" height="11"></rect>
-          <rect fill="#aaa" width="13" height="11"></rect>
-          <rect fill="#aaa" width="30" height="13"></rect>
-          <rect fill="#aaa" width="25" height="27"></rect>
-          <rect fill="#aaa" width="11" height="12"></rect>
-          <rect fill="#aaa" width="14" height="10"></rect>
-          <rect fill="#aaa" width="14" height="11"></rect>
-          <rect fill="#aaa" width="14" height="28"></rect>
+          <rect fill="#00C4FF" width="11" height="10"></rect>
+          <rect fill="#9013FE" width="28" height="26"></rect>
+          <rect fill="#FA1C46" width="28" height="23"></rect>
+          <rect fill="#00C4FF" width="19" height="18"></rect>
+          <rect fill="#9013FE" width="21" height="21"></rect>
+          <rect fill="#FA1C46" width="29" height="28"></rect>
+          <rect fill="#00C4FF" width="27" height="11"></rect>
+          <rect fill="#9013FE" width="21" height="14"></rect>
+          <rect fill="#FA1C46" width="20" height="11"></rect>
+          <rect fill="#00C4FF" width="15" height="29"></rect>
+          <rect fill="#9013FE" width="17" height="12"></rect>
+          <rect fill="#FA1C46" width="30" height="30"></rect>
+          <rect fill="#00C4FF" width="16" height="13"></rect>
+          <rect fill="#9013FE" width="19" height="28"></rect>
+          <rect fill="#FA1C46" width="16" height="25"></rect>
+          <rect fill="#00C4FF" width="26" height="25"></rect>
+          <rect fill="#9013FE" width="18" height="29"></rect>
+          <rect fill="#FA1C46" width="29" height="19"></rect>
+          <rect fill="#00C4FF" width="23" height="10"></rect>
+          <rect fill="#9013FE" width="12" height="23"></rect>
+          <rect fill="#FA1C46" width="29" height="14"></rect>
+          <rect fill="#00C4FF" width="26" height="13"></rect>
+          <rect fill="#9013FE" width="28" height="29"></rect>
+          <rect fill="#FA1C46" width="20" height="26"></rect>
+          <rect fill="#00C4FF" width="21" height="28"></rect>
         </g>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="74" transform="translate(650,285)" data-x="650" data-y="285"></circle>
-          <circle fill="white" stroke="none" r="73" transform="translate(667,212)" data-x="667" data-y="212"></circle>
-          <circle fill="white" stroke="none" r="89" transform="translate(681,218)" data-x="681" data-y="218"></circle>
-          <circle fill="white" stroke="none" r="85" transform="translate(701,226)" data-x="701" data-y="226"></circle>
-          <circle fill="white" stroke="none" r="81" transform="translate(607,201)" data-x="607" data-y="201"></circle>
-          <circle fill="white" stroke="none" r="89" transform="translate(695,216)" data-x="695" data-y="216"></circle>
-          <circle fill="white" stroke="none" r="57" transform="translate(720,267)" data-x="720" data-y="267"></circle>
-          <circle fill="white" stroke="none" r="93" transform="translate(523,208)" data-x="523" data-y="208"></circle>
-          <circle fill="white" stroke="none" r="97" transform="translate(562,270)" data-x="562" data-y="270"></circle>
-          <circle fill="white" stroke="none" r="65" transform="translate(744,220)" data-x="744" data-y="220"></circle>
-          <circle fill="white" stroke="none" r="94" transform="translate(748,277)" data-x="748" data-y="277"></circle>
-          <circle fill="white" stroke="none" r="81" transform="translate(529,201)" data-x="529" data-y="201"></circle>
+          <circle fill="white" stroke="none" r="56" transform="translate(506,280)" data-x="506" data-y="280"></circle>
+          <circle fill="white" stroke="none" r="52" transform="translate(604,232)" data-x="604" data-y="232"></circle>
+          <circle fill="white" stroke="none" r="70" transform="translate(777,209)" data-x="777" data-y="209"></circle>
+          <circle fill="white" stroke="none" r="66" transform="translate(670,264)" data-x="670" data-y="264"></circle>
+          <circle fill="white" stroke="none" r="63" transform="translate(569,296)" data-x="569" data-y="296"></circle>
+          <circle fill="white" stroke="none" r="57" transform="translate(529,212)" data-x="529" data-y="212"></circle>
+          <circle fill="white" stroke="none" r="55" transform="translate(625,211)" data-x="625" data-y="211"></circle>
+          <circle fill="white" stroke="none" r="74" transform="translate(711,266)" data-x="711" data-y="266"></circle>
+          <circle fill="white" stroke="none" r="60" transform="translate(692,221)" data-x="692" data-y="221"></circle>
+          <circle fill="white" stroke="none" r="93" transform="translate(511,290)" data-x="511" data-y="290"></circle>
+          <circle fill="white" stroke="none" r="68" transform="translate(703,284)" data-x="703" data-y="284"></circle>
+          <circle fill="white" stroke="none" r="50" transform="translate(604,227)" data-x="604" data-y="227"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -345,26 +345,26 @@
       </g>
       <g id="js-svg" class="h-g">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(796,164)" data-x="796" data-y="164"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(335,778)" data-x="335" data-y="778"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(916,377)" data-x="916" data-y="377"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(668,648)" data-x="668" data-y="648"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(735,723)" data-x="735" data-y="723"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(843,455)" data-x="843" data-y="455"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(982,650)" data-x="982" data-y="650"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(537,117)" data-x="537" data-y="117"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(263,290)" data-x="263" data-y="290"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(466,705)" data-x="466" data-y="705"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(843,557)" data-x="843" data-y="557"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(918,473)" data-x="918" data-y="473"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(732,283)" data-x="732" data-y="283"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(344,336)" data-x="344" data-y="336"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(780,501)" data-x="780" data-y="501"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(339,595)" data-x="339" data-y="595"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1018,620)" data-x="1018" data-y="620"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1013,744)" data-x="1013" data-y="744"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(994,392)" data-x="994" data-y="392"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(822,311)" data-x="822" data-y="311"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(245,648)" data-x="245" data-y="648"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(280,724)" data-x="280" data-y="724"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(875,271)" data-x="875" data-y="271"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(984,82)" data-x="984" data-y="82"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1006,659)" data-x="1006" data-y="659"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(275,524)" data-x="275" data-y="524"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(419,628)" data-x="419" data-y="628"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(487,439)" data-x="487" data-y="439"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(525,81)" data-x="525" data-y="81"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(801,91)" data-x="801" data-y="91"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(534,233)" data-x="534" data-y="233"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(441,326)" data-x="441" data-y="326"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(272,493)" data-x="272" data-y="493"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(956,520)" data-x="956" data-y="520"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(865,800)" data-x="865" data-y="800"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(508,178)" data-x="508" data-y="178"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(760,791)" data-x="760" data-y="791"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(999,402)" data-x="999" data-y="402"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(997,770)" data-x="997" data-y="770"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(444,356)" data-x="444" data-y="356"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
