--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <stop stop-color="#FFFFFF" stop-opacity="0" offset="100%"></stop>
         </lineargradient>
       </defs>
-      <g id="js-meets">
+      <g id="js-meets" class="h-g1">
         <mask id="burst-mask">
           <g id="js-meets-burst" transform="translate(0,10)">
             <path d="M736.4966028492113,423.76251462960715 L770.2704138464353,414.5793947499696" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
@@ -145,21 +145,29 @@
             <path d="M592.9485029230436,361.7607988317144 L576.480478946109,330.87707842281446" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
             <path d="M679.6521971041294,358.19747680583464 L693.5304660905747,326.0665936878767" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
           </g>
+          <g id="js-meets-blow" class="h-g">
+            <circle cx="640" cy="450" data-x="17.68430041692568" data-y="249.37374665101356" fill="#fff" r="50"></circle>
+            <circle cx="640" cy="450" data-x="-207.1220989304673" data-y="140.0015576150413" fill="#fff" r="50"></circle>
+            <circle cx="640" cy="450" data-x="-224.80576001264103" data-y="-109.37262118619469" fill="#fff" r="50"></circle>
+            <circle cx="640" cy="450" data-x="-17.682967162328623" data-y="-249.3738411949738" fill="#fff" r="50"></circle>
+            <circle cx="640" cy="450" data-x="207.1228474332637" data-y="-140.00045025333657" fill="#fff" r="50"></circle>
+            <circle cx="640" cy="450" data-x="224.80517525852986" data-y="109.37382308844144" fill="#fff" r="50"></circle>
+          </g>
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="63" transform="translate(589,235)" data-x="589" data-y="235"></circle>
-          <circle fill="white" stroke="none" r="97" transform="translate(519,225)" data-x="519" data-y="225"></circle>
-          <circle fill="white" stroke="none" r="87" transform="translate(779,223)" data-x="779" data-y="223"></circle>
-          <circle fill="white" stroke="none" r="83" transform="translate(634,291)" data-x="634" data-y="291"></circle>
-          <circle fill="white" stroke="none" r="80" transform="translate(632,214)" data-x="632" data-y="214"></circle>
-          <circle fill="white" stroke="none" r="95" transform="translate(765,208)" data-x="765" data-y="208"></circle>
-          <circle fill="white" stroke="none" r="65" transform="translate(513,283)" data-x="513" data-y="283"></circle>
-          <circle fill="white" stroke="none" r="95" transform="translate(509,203)" data-x="509" data-y="203"></circle>
-          <circle fill="white" stroke="none" r="92" transform="translate(704,220)" data-x="704" data-y="220"></circle>
-          <circle fill="white" stroke="none" r="97" transform="translate(675,266)" data-x="675" data-y="266"></circle>
-          <circle fill="white" stroke="none" r="80" transform="translate(754,201)" data-x="754" data-y="201"></circle>
-          <circle fill="white" stroke="none" r="81" transform="translate(502,225)" data-x="502" data-y="225"></circle>
+          <circle fill="white" stroke="none" r="69" transform="translate(734,218)" data-x="734" data-y="218"></circle>
+          <circle fill="white" stroke="none" r="97" transform="translate(547,269)" data-x="547" data-y="269"></circle>
+          <circle fill="white" stroke="none" r="93" transform="translate(529,276)" data-x="529" data-y="276"></circle>
+          <circle fill="white" stroke="none" r="88" transform="translate(563,279)" data-x="563" data-y="279"></circle>
+          <circle fill="white" stroke="none" r="62" transform="translate(768,275)" data-x="768" data-y="275"></circle>
+          <circle fill="white" stroke="none" r="80" transform="translate(635,262)" data-x="635" data-y="262"></circle>
+          <circle fill="white" stroke="none" r="97" transform="translate(554,234)" data-x="554" data-y="234"></circle>
+          <circle fill="white" stroke="none" r="69" transform="translate(711,228)" data-x="711" data-y="228"></circle>
+          <circle fill="white" stroke="none" r="54" transform="translate(668,258)" data-x="668" data-y="258"></circle>
+          <circle fill="white" stroke="none" r="90" transform="translate(724,296)" data-x="724" data-y="296"></circle>
+          <circle fill="white" stroke="none" r="67" transform="translate(551,278)" data-x="551" data-y="278"></circle>
+          <circle fill="white" stroke="none" r="53" transform="translate(687,277)" data-x="687" data-y="277"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -318,26 +326,26 @@
       </g>
       <g id="js-svg" class="h-g">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(539,539)" data-x="539" data-y="539"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(895,156)" data-x="895" data-y="156"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(313,62)" data-x="313" data-y="62"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(810,603)" data-x="810" data-y="603"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1028,339)" data-x="1028" data-y="339"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(735,680)" data-x="735" data-y="680"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(640,689)" data-x="640" data-y="689"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(487,848)" data-x="487" data-y="848"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(914,684)" data-x="914" data-y="684"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(364,783)" data-x="364" data-y="783"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(702,616)" data-x="702" data-y="616"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(784,305)" data-x="784" data-y="305"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(269,471)" data-x="269" data-y="471"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(935,685)" data-x="935" data-y="685"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(381,85)" data-x="381" data-y="85"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1030,315)" data-x="1030" data-y="315"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(466,162)" data-x="466" data-y="162"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(318,517)" data-x="318" data-y="517"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(275,63)" data-x="275" data-y="63"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(622,473)" data-x="622" data-y="473"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(515,712)" data-x="515" data-y="712"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(498,638)" data-x="498" data-y="638"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(724,819)" data-x="724" data-y="819"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(952,382)" data-x="952" data-y="382"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(917,692)" data-x="917" data-y="692"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(292,799)" data-x="292" data-y="799"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(651,641)" data-x="651" data-y="641"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(926,844)" data-x="926" data-y="844"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(999,842)" data-x="999" data-y="842"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(772,361)" data-x="772" data-y="361"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(669,418)" data-x="669" data-y="418"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1025,536)" data-x="1025" data-y="536"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(718,431)" data-x="718" data-y="431"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(273,537)" data-x="273" data-y="537"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(823,373)" data-x="823" data-y="373"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(465,57)" data-x="465" data-y="57"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(270,50)" data-x="270" data-y="50"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(613,162)" data-x="613" data-y="162"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(745,380)" data-x="745" data-y="380"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(558,802)" data-x="558" data-y="802"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
@@ -381,81 +389,31 @@
         </g>
         <rect fill="url(#cheese-pattern)" mask="url(#svg-v-mask)" width="1280" height="900"></rect>
         <g id="js-svg-blow" transform="translate(625,435)" class="h-g">
-          <g>
-            <rect fill="#00C4FF" width="12" height="11"></rect>
-          </g>
-          <g>
-            <rect fill="#9013FE" width="11" height="26"></rect>
-          </g>
-          <g>
-            <rect fill="#FA1C46" width="10" height="12"></rect>
-          </g>
-          <g>
-            <rect fill="#00C4FF" width="19" height="18"></rect>
-          </g>
-          <g>
-            <rect fill="#9013FE" width="17" height="11"></rect>
-          </g>
-          <g>
-            <rect fill="#FA1C46" width="25" height="11"></rect>
-          </g>
-          <g>
-            <rect fill="#00C4FF" width="13" height="27"></rect>
-          </g>
-          <g>
-            <rect fill="#9013FE" width="28" height="19"></rect>
-          </g>
-          <g>
-            <rect fill="#FA1C46" width="10" height="14"></rect>
-          </g>
-          <g>
-            <rect fill="#00C4FF" width="13" height="28"></rect>
-          </g>
-          <g>
-            <rect fill="#9013FE" width="25" height="26"></rect>
-          </g>
-          <g>
-            <rect fill="#FA1C46" width="13" height="30"></rect>
-          </g>
-          <g>
-            <rect fill="#00C4FF" width="24" height="25"></rect>
-          </g>
-          <g>
-            <rect fill="#9013FE" width="30" height="17"></rect>
-          </g>
-          <g>
-            <rect fill="#FA1C46" width="27" height="10"></rect>
-          </g>
-          <g>
-            <rect fill="#00C4FF" width="16" height="21"></rect>
-          </g>
-          <g>
-            <rect fill="#9013FE" width="30" height="19"></rect>
-          </g>
-          <g>
-            <rect fill="#FA1C46" width="15" height="12"></rect>
-          </g>
-          <g>
-            <rect fill="#00C4FF" width="20" height="19"></rect>
-          </g>
-          <g>
-            <rect fill="#9013FE" width="14" height="13"></rect>
-          </g>
-          <g>
-            <rect fill="#FA1C46" width="14" height="16"></rect>
-          </g>
-          <g>
-            <rect fill="#00C4FF" width="14" height="16"></rect>
-          </g>
-          <g>
-            <rect fill="#9013FE" width="20" height="29"></rect>
-          </g>
-          <g>
-            <rect fill="#FA1C46" width="26" height="23"></rect>
-          </g>
-          <g>
-            <rect fill="#00C4FF" width="15" height="13"></rect>
-          </g>
+          <rect fill="#00C4FF" width="26" height="23"></rect>
+          <rect fill="#9013FE" width="16" height="21"></rect>
+          <rect fill="#FA1C46" width="12" height="28"></rect>
+          <rect fill="#00C4FF" width="17" height="13"></rect>
+          <rect fill="#9013FE" width="25" height="26"></rect>
+          <rect fill="#FA1C46" width="19" height="13"></rect>
+          <rect fill="#00C4FF" width="22" height="16"></rect>
+          <rect fill="#9013FE" width="22" height="30"></rect>
+          <rect fill="#FA1C46" width="19" height="19"></rect>
+          <rect fill="#00C4FF" width="30" height="14"></rect>
+          <rect fill="#9013FE" width="13" height="30"></rect>
+          <rect fill="#FA1C46" width="20" height="20"></rect>
+          <rect fill="#00C4FF" width="24" height="17"></rect>
+          <rect fill="#9013FE" width="16" height="14"></rect>
+          <rect fill="#FA1C46" width="30" height="29"></rect>
+          <rect fill="#00C4FF" width="22" height="13"></rect>
+          <rect fill="#9013FE" width="11" height="15"></rect>
+          <rect fill="#FA1C46" width="27" height="29"></rect>
+          <rect fill="#00C4FF" width="18" height="25"></rect>
+          <rect fill="#9013FE" width="21" height="16"></rect>
+          <rect fill="#FA1C46" width="10" height="18"></rect>
+          <rect fill="#00C4FF" width="12" height="21"></rect>
+          <rect fill="#9013FE" width="26" height="21"></rect>
+          <rect fill="#FA1C46" width="18" height="30"></rect>
+          <rect fill="#00C4FF" width="15" height="22"></rect>
         </g>
       </g>
       <g id="js-triangles" class="h-g">
@@ -669,7 +627,7 @@
   </g>
   
 </g>
-          <rect id="js-slice-line" transform="scale(0) rotate(45)" opacity="0" height="2" width="400" x="340" y="450" fill="white"></rect>
+          <rect id="js-slice-line" transform="scale(0) rotate(0)" opacity="0" height="2" width="400" x="340" y="450" fill="white"></rect>
         </mask>
         <rect fill="url(#owls-pattern)" mask="url(#dust-mask)" width="1280" height="800"></rect>
         <mask id="div-sparks-mask">
