--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
                 <path d="M592.9485029230436,361.7607988317144 L576.480478946109,330.87707842281446" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
                 <path d="M679.6521971041294,358.19747680583464 L693.5304660905747,326.0665936878767" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
               </g>
+            </mask>
+            <mask id="blow-mask">
               <g id="js-meets-blow" class="h-g">
                 <circle cx="640" cy="450" data-x="17.68430041692568" data-y="249.37374665101356" fill="#fff" r="50"></circle>
                 <circle cx="640" cy="450" data-x="-207.1220989304673" data-y="140.0015576150413" fill="#fff" r="50"></circle>
@@ -157,19 +159,20 @@
               </g>
             </mask>
             <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
+            <rect width="1280" height="900" fill="url(#wood-pattern)" mask="url(#blow-mask)"></rect>
             <g id="js-meets-circles">
-              <circle fill="white" stroke="none" r="82" transform="translate(625,231)" data-x="625" data-y="231"></circle>
-              <circle fill="white" stroke="none" r="98" transform="translate(599,202)" data-x="599" data-y="202"></circle>
-              <circle fill="white" stroke="none" r="68" transform="translate(606,227)" data-x="606" data-y="227"></circle>
-              <circle fill="white" stroke="none" r="79" transform="translate(504,292)" data-x="504" data-y="292"></circle>
-              <circle fill="white" stroke="none" r="63" transform="translate(687,212)" data-x="687" data-y="212"></circle>
-              <circle fill="white" stroke="none" r="99" transform="translate(539,255)" data-x="539" data-y="255"></circle>
-              <circle fill="white" stroke="none" r="78" transform="translate(524,211)" data-x="524" data-y="211"></circle>
-              <circle fill="white" stroke="none" r="69" transform="translate(748,243)" data-x="748" data-y="243"></circle>
-              <circle fill="white" stroke="none" r="98" transform="translate(562,281)" data-x="562" data-y="281"></circle>
-              <circle fill="white" stroke="none" r="94" transform="translate(573,283)" data-x="573" data-y="283"></circle>
-              <circle fill="white" stroke="none" r="70" transform="translate(768,261)" data-x="768" data-y="261"></circle>
-              <circle fill="white" stroke="none" r="95" transform="translate(757,222)" data-x="757" data-y="222"></circle>
+              <circle fill="white" stroke="none" r="92" transform="translate(715,201)" data-x="715" data-y="201"></circle>
+              <circle fill="white" stroke="none" r="50" transform="translate(706,222)" data-x="706" data-y="222"></circle>
+              <circle fill="white" stroke="none" r="100" transform="translate(690,276)" data-x="690" data-y="276"></circle>
+              <circle fill="white" stroke="none" r="87" transform="translate(718,211)" data-x="718" data-y="211"></circle>
+              <circle fill="white" stroke="none" r="50" transform="translate(646,280)" data-x="646" data-y="280"></circle>
+              <circle fill="white" stroke="none" r="80" transform="translate(542,285)" data-x="542" data-y="285"></circle>
+              <circle fill="white" stroke="none" r="90" transform="translate(743,273)" data-x="743" data-y="273"></circle>
+              <circle fill="white" stroke="none" r="98" transform="translate(527,269)" data-x="527" data-y="269"></circle>
+              <circle fill="white" stroke="none" r="89" transform="translate(512,215)" data-x="512" data-y="215"></circle>
+              <circle fill="white" stroke="none" r="91" transform="translate(710,260)" data-x="710" data-y="260"></circle>
+              <circle fill="white" stroke="none" r="95" transform="translate(677,223)" data-x="677" data-y="223"></circle>
+              <circle fill="white" stroke="none" r="55" transform="translate(598,250)" data-x="598" data-y="250"></circle>
             </g>
             <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
             <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -328,26 +331,26 @@
           </g>
           <g id="js-svg" class="h-g">
             <g id="js-svg-circles" class="h-g">
-              <circle fill="white" stroke="" r="0" transform="translate(525,69)" data-x="525" data-y="69"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(502,563)" data-x="502" data-y="563"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(446,785)" data-x="446" data-y="785"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(721,297)" data-x="721" data-y="297"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(794,517)" data-x="794" data-y="517"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(646,686)" data-x="646" data-y="686"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(342,130)" data-x="342" data-y="130"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(948,204)" data-x="948" data-y="204"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(932,184)" data-x="932" data-y="184"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(1000,362)" data-x="1000" data-y="362"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(303,173)" data-x="303" data-y="173"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(640,570)" data-x="640" data-y="570"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(361,712)" data-x="361" data-y="712"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(436,184)" data-x="436" data-y="184"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(263,850)" data-x="263" data-y="850"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(820,653)" data-x="820" data-y="653"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(1008,372)" data-x="1008" data-y="372"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(348,714)" data-x="348" data-y="714"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(920,384)" data-x="920" data-y="384"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(1005,464)" data-x="1005" data-y="464"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(611,781)" data-x="611" data-y="781"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(433,154)" data-x="433" data-y="154"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(738,417)" data-x="738" data-y="417"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(801,148)" data-x="801" data-y="148"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(732,495)" data-x="732" data-y="495"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(432,533)" data-x="432" data-y="533"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(254,115)" data-x="254" data-y="115"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(589,845)" data-x="589" data-y="845"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(555,291)" data-x="555" data-y="291"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(816,580)" data-x="816" data-y="580"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(578,652)" data-x="578" data-y="652"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(306,127)" data-x="306" data-y="127"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(343,312)" data-x="343" data-y="312"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(315,404)" data-x="315" data-y="404"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(721,431)" data-x="721" data-y="431"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(827,566)" data-x="827" data-y="566"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(681,222)" data-x="681" data-y="222"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(580,312)" data-x="580" data-y="312"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(763,634)" data-x="763" data-y="634"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(271,101)" data-x="271" data-y="101"></circle>
             </g>
             <mask id="svg-s-mask">
               <g transform="translate(250,0)">
@@ -391,31 +394,31 @@
             </g>
             <rect fill="url(#cheese-pattern)" mask="url(#svg-v-mask)" width="1280" height="900"></rect>
             <g id="js-svg-blow" transform="translate(625,435)" class="h-g">
-              <rect fill="#00C4FF" width="12" height="13"></rect>
-              <rect fill="#9013FE" width="30" height="27"></rect>
-              <rect fill="#FA1C46" width="21" height="29"></rect>
-              <rect fill="#00C4FF" width="12" height="18"></rect>
-              <rect fill="#9013FE" width="21" height="22"></rect>
-              <rect fill="#FA1C46" width="30" height="18"></rect>
-              <rect fill="#00C4FF" width="24" height="25"></rect>
-              <rect fill="#9013FE" width="19" height="25"></rect>
-              <rect fill="#FA1C46" width="20" height="20"></rect>
-              <rect fill="#00C4FF" width="24" height="21"></rect>
-              <rect fill="#9013FE" width="20" height="10"></rect>
-              <rect fill="#FA1C46" width="20" height="29"></rect>
-              <rect fill="#00C4FF" width="23" height="11"></rect>
-              <rect fill="#9013FE" width="19" height="15"></rect>
-              <rect fill="#FA1C46" width="18" height="26"></rect>
-              <rect fill="#00C4FF" width="17" height="26"></rect>
-              <rect fill="#9013FE" width="15" height="15"></rect>
-              <rect fill="#FA1C46" width="18" height="29"></rect>
-              <rect fill="#00C4FF" width="28" height="24"></rect>
-              <rect fill="#9013FE" width="22" height="30"></rect>
-              <rect fill="#FA1C46" width="13" height="16"></rect>
-              <rect fill="#00C4FF" width="12" height="28"></rect>
-              <rect fill="#9013FE" width="19" height="21"></rect>
-              <rect fill="#FA1C46" width="20" height="10"></rect>
-              <rect fill="#00C4FF" width="19" height="12"></rect>
+              <rect fill="#00C4FF" width="16" height="11"></rect>
+              <rect fill="#9013FE" width="16" height="24"></rect>
+              <rect fill="#FA1C46" width="15" height="15"></rect>
+              <rect fill="#00C4FF" width="14" height="17"></rect>
+              <rect fill="#9013FE" width="19" height="14"></rect>
+              <rect fill="#FA1C46" width="17" height="26"></rect>
+              <rect fill="#00C4FF" width="18" height="14"></rect>
+              <rect fill="#9013FE" width="28" height="28"></rect>
+              <rect fill="#FA1C46" width="26" height="19"></rect>
+              <rect fill="#00C4FF" width="27" height="20"></rect>
+              <rect fill="#9013FE" width="13" height="16"></rect>
+              <rect fill="#FA1C46" width="15" height="12"></rect>
+              <rect fill="#00C4FF" width="25" height="12"></rect>
+              <rect fill="#9013FE" width="23" height="30"></rect>
+              <rect fill="#FA1C46" width="10" height="16"></rect>
+              <rect fill="#00C4FF" width="10" height="23"></rect>
+              <rect fill="#9013FE" width="28" height="21"></rect>
+              <rect fill="#FA1C46" width="21" height="16"></rect>
+              <rect fill="#00C4FF" width="22" height="27"></rect>
+              <rect fill="#9013FE" width="11" height="23"></rect>
+              <rect fill="#FA1C46" width="12" height="14"></rect>
+              <rect fill="#00C4FF" width="27" height="26"></rect>
+              <rect fill="#9013FE" width="13" height="15"></rect>
+              <rect fill="#FA1C46" width="24" height="14"></rect>
+              <rect fill="#00C4FF" width="11" height="20"></rect>
             </g>
           </g>
           <g id="js-triangles" class="h-g">
